fix: letter spacing on mobile

--- a/styles/WIP.module.css
+++ b/styles/WIP.module.css
@@ -16,13 +16,25 @@
   text-align: center;
   color: var(--primary-color);
   font-family: ArialBlack;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.03rem;
   font-size: 2.2rem;
   margin-top: 0rem;
 }
 
 .caption {
   text-align: center;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.03rem;
   font-size: 1.4rem;
+}
+
+@media (max-width: 800px) {
+  .title {
+    font-size: 1.8rem;
+    letter-spacing: 0.01rem;
+  }
+  .caption {
+    text-align: center;
+    letter-spacing: 0.02rem;
+    font-size: 1.2rem;
+  }
 }
